# PythonTypedData

./: DataContainers.py  GenericBase.py  Mixins.py  README.md  TestTypedList.py  abstract_classes.py  concrete_classes.py  maybe.py  pyproject.toml  pyrightconfig.json  requirements.txt  type_validation.py
Tests/: TestAbstractClasses.py  TestTypedDict.py  TestTypedFrozenDict.py  TestTypedFrozenSet.py  TestTypedList.py  TestTypedSet.py  TestTypedTuple.py  test_abstract_classes.py  test_collection.py  test_dict.py  test_immutable_set.py  test_list.py  test_maybe.py  test_mutable_set.py  test_set.py  test_type_hierarchy.py  test_type_inference.py  test_type_validation.py
abstract_classes/: abstract_dict.py  abstract_sequence.py  abstract_set.py  abstract_tuple.py  collection.py  generic_base.py  metadata.py  protocols.py
concrete_classes/: dict.py  list.py  maybe.py  set.py
type_validation/: type_hierarchy.py  type_inference.py  type_validation.py
