[project]
name = "pythontypeddata"
version = "0.0.1"
description = "A recreation of Java's Collection and Map interfaces within Python."
authors = [
    {name = "Alfonso Gallego"}
]
license = {text = "GNU GENERAL PUBLIC LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "immutabledict (>=4.2.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
